--- a/ajywsc1403666791.plist
+++ b/ajywsc1403666791.plist
@@ -9,7 +9,7 @@
 			<array>
 				<dict>
 					<key>kind</key>
-					<string></string>
+					<string>software-package</string>
 					<key>url</key>
 					<string>http://msdemo.card7.net/tpl/Wap/default/download/156/ajywsc1403666791.ipa</string>
 				</dict>
