--- a/hjlsxl1411789583.plist
+++ b/hjlsxl1411789583.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/hjlsxl1411789583.ipa#remote</string>
+					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/hjlsxl1411789583.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
