--- a/xbfcw.plist
+++ b/xbfcw.plist
@@ -23,9 +23,9 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>光伏发电</string>
+				<string>西北房产网</string>
 				<key>title</key>
-				<string>光伏发电</string>
+				<string>西北房产网</string>
 			</dict>
 		</dict>
 	</array>
