--- a/xbfcw.plist
+++ b/xbfcw.plist
@@ -17,15 +17,15 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.hava</string>
+				<string>com.chjhc.xbfcw</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>IG-Coil</string>
+				<string>西北房产网</string>
 				<key>title</key>
-				<string>IG-Coil</string>
+				<string>西北房产网</string>
 			</dict>
 		</dict>
 	</array>
