--- a/xbfcw.plist
+++ b/xbfcw.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://msdemo.card7.net/tpl/Wap/default/download/562/vfsbph1410402497.ipa#remote</string>
+					<string>http://coogu.com.cn/ipa/xbfcw.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
