--- a/xbfcw.plist
+++ b/xbfcw.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://coogu.com.cn/ipa/xbfcw.ipa</string>
+					<string>http://115.28.73.202/ipa/xbfcw.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
