--- a/jxjcmhw.plist
+++ b/jxjcmhw.plist
@@ -1,1 +1,33 @@
-werejjkew
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>http://115.28.73.202/ipa/gffd.ipa</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.chjhc.jxjcmhw</string>
+				<key>bundle-version</key>
+				<string>1.0</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>subtitle</key>
+				<string>江西建材门户网</string>
+				<key>title</key>
+				<string>江西建材门户网</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
+</plist>
