--- a/ynwlw.plist
+++ b/ynwlw.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.xbfcw</string>
+				<string>com.chjhc.ylwlw</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
