--- a/jxjcmhw.plist
+++ b/jxjcmhw.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://115.28.73.202/ipa/gffd.ipa</string>
+					<string>http://115.28.73.202/ipa/jxjcmhw.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
