--- a/jzsh.plist
+++ b/jzsh.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ericfile.oss-cn-qingdao.aliyuncs.com/app/ios/jzsh.ipa?Expires=1414466324&amp;OSSAccessKeyId=VMxzw628RVoj3WJo&amp;Signature=6Uv6L60AyMFHqBDqcUY2854w3kU%3D</string>
+					<string>http://ericfile.oss-cn-qingdao.aliyuncs.com/app/ios/jzsh.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
