--- a/johjax1414648019.plist
+++ b/johjax1414648019.plist
@@ -1,1 +1,33 @@
-dsfd
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/johjax1414648019.ipa</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.chjhc.jndswkct</string>
+				<key>bundle-version</key>
+				<string>1.0.1</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>subtitle</key>
+				<string>商务考察团</string>
+				<key>title</key>
+				<string>商务考察团</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
+</plist>
