--- a/ncgwys1414035408.plist
+++ b/ncgwys1414035408.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://msdemo.card7.net/tpl/Wap/default/download/140/ncgwys1414035408.ipa#remote</string>
+					<string>http://msdemo.card7.net/client/1.3.0/super_album.ipa#remote</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -19,7 +19,7 @@
 				<key>bundle-identifier</key>
 				<string>com.chjhc.ceshi</string>
 				<key>bundle-version</key>
-				<string>1.0.4</string>
+				<string>1.3.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
