--- a/finrzc1416464252.plist
+++ b/finrzc1416464252.plist
@@ -24,6 +24,8 @@
 				<string>software</string>
 				<key>subtitle</key>
 				<string>敏求电子</string>
+				<key>title</key>
+				<string>敏求电子</string>
 			</dict>
 		</dict>
 	</array>
