--- a/finrzc1416464252.plist
+++ b/finrzc1416464252.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.minqiudianzi</string>
+				<string>com.chjhc.----</string>
 				<key>bundle-version</key>
 				<string>1.1.0</string>
 				<key>kind</key>
