--- a/johjax1414648019.plist
+++ b/johjax1414648019.plist
@@ -11,19 +11,17 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/johjax1414648019.ipa</string>
+					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/johjax1414648019.ipa#remote</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.jndswkct</string>
+				<string>com.chjhc..-----</string>
 				<key>bundle-version</key>
-				<string>1.0.1</string>
+				<string>1.1.0</string>
 				<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
-				<string>商务考察团</string>
 				<key>title</key>
 				<string>商务考察团</string>
 			</dict>
