--- a/uuapky1416650136.plist
+++ b/uuapky1416650136.plist
@@ -17,13 +17,11 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.baoqinglvyou</string>
+				<string>com.chjhc..----</string>
 				<key>bundle-version</key>
-				<string>1.1.4</string>
+				<string>1.1.0</string>
 				<key>kind</key>
 				<string>software</string>
-				<key>subtitle</key>
-				<string>宝庆驴友</string>
 				<key>title</key>
 				<string>宝庆驴友</string>
 			</dict>
