--- a/bjbjed1414736769.plist
+++ b/bjbjed1414736769.plist
@@ -17,7 +17,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.chjhc.kfwl</string>
+				<string>com.chjhc..---</string>
 				<key>bundle-version</key>
 				<string>1.0.1</string>
 				<key>kind</key>
