--- a/lhjfoe1416272208.plist
+++ b/lhjfoe1416272208.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://msdemo.card7.net/tpl/Wap/default/download/164/ywiyup1417081155.ipa#remote</string>
+					<string>http://msdemo.card7.net/tpl/Wap/default/download/859/lhjfoe1416272208.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
