--- a/yunanguanggao.plist
+++ b/yunanguanggao.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://115.28.73.202/ipa/xbmr.ipa</string>
+					<string>http://115.28.73.202/ipa/yngg.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -25,7 +25,7 @@
 				<key>subtitle</key>
 				<string>云南广告</string>
 				<key>title</key>
-				<string>西北美容</string>
+				<string云南广告</string>
 			</dict>
 		</dict>
 	</array>
