--- a/dmg.plist
+++ b/dmg.plist
@@ -23,9 +23,9 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>subtitle</key>
-				<string>大明眼镜</string>
+				<string>智慧长沙</string>
 				<key>title</key>
-				<string>大明眼镜</string>
+				<string>智慧长沙</string>
 			</dict>
 		</dict>
 	</array>
