--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>http://192.168.40.103:8080/iosplist/jtverp.ipa</string>
+            <string>http://192.168.100.129/iosplist/jtverp.ipa</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -19,7 +19,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://192.168.40.103:8080/iosplist/icon.png</string>
+            <string>http://192.168.100.129/iosplist/icon.png</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -27,7 +27,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://192.168.40.103:8080/iosplist/icon.png</string>
+            <string>http://192.168.100.129/iosplist/icon.png</string>
           </dict>
         </array>
         <key>metadata</key>
@@ -41,7 +41,7 @@
           <key>subtitle</key>
           <string></string>
           <key>title</key>
-          <string>JTVϵͳ</string>
+          <string>JTVERP</string>
         </dict>
       </dict>
     </array>
