--- a/jtv.plist
+++ b/jtv.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>http://www.jialigou.com.cn:8686/iosplist/</string>
+            <string>http://www.jialigou.com.cn:8686/iosplist/jtverp.ipa</string>
           </dict>
           <dict>
             <key>kind</key>
