--- a/dmg.plist
+++ b/dmg.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://ericfile.oss-cn-qingdao.aliyuncs.com/app/ios/dmg.ipa</string>
+					<string>http://www.jialigou.com.cn:8686/zhcsserver/download/zhcs.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
