--- a/dmg.plist
+++ b/dmg.plist
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>items</key>
-	<array>
-		<dict>
-			<key>assets</key>
-			<array>
-				<dict>
-					<key>kind</key>
-					<string>software-package</string>
-					<key>url</key>
-					<string>http://www.jialigou.com.cn:8686/zhcsserver/download/zhcs.ipa</string>
-				</dict>
-			</array>
-			<key>metadata</key>
-			<dict>
-				<key>bundle-identifier</key>
-				<string>com.chjhc.----</string>
-				<key>bundle-version</key>
-				<string>1.0</string>
-				<key>kind</key>
-				<string>software</string>
-				<key>subtitle</key>
-				<string>智慧长沙</string>
-				<key>title</key>
-				<string>智慧长沙</string>
-			</dict>
-		</dict>
-	</array>
-</dict>
+<plist version="ver 2013.01.09 1.01.02(.02)">
+  <dict>
+    <key>items</key>
+    <array>
+      <dict>
+        <key>assets</key>
+        <array>
+          <dict>
+            <key>kind</key>
+            <string>software-package</string>
+            <key>url</key>
+            <string>http://www.jialigou.com.cn:8686/zhcsserver/download/zhcs.ipa</string>
+          </dict>
+          <dict>
+            <key>kind</key>
+            <string>full-size-image</string>
+            <key>needs-shine</key>
+            <false/>
+            <key>url</key>
+            <string>http://www.jialigou.com.cn:8686/zhcsserver/images/zhcslogo.png</string>
+          </dict>
+          <dict>
+            <key>kind</key>
+            <string>display-image</string>
+            <key>needs-shine</key>
+            <false/>
+            <key>url</key>
+            <string>http://www.jialigou.com.cn:8686/zhcsserver/images/zhcslogo.png</string>
+          </dict>
+        </array>
+        <key>metadata</key>
+        <dict>
+          <key>bundle-identifier</key>
+          <string>com.chjhc.wp</string>
+          <key>bundle-version</key>
+          <string>1.0</string>
+          <key>kind</key>
+          <string>software</string>
+          <key>subtitle</key>
+          <string></string>
+          <key>title</key>
+          <string>JTVERP</string>
+        </dict>
+      </dict>
+    </array>
+  </dict>
 </plist>
