--- a/dmg.plist
+++ b/dmg.plist
@@ -39,9 +39,9 @@
           <key>kind</key>
           <string>software</string>
           <key>subtitle</key>
-          <string></string>
+          <string>智慧长沙</string>
           <key>title</key>
-          <string>JTVERP</string>
+          <string>智慧长沙</string>
         </dict>
       </dict>
     </array>
