--- a/dmg.plist
+++ b/dmg.plist
@@ -33,7 +33,7 @@
         <key>metadata</key>
         <dict>
           <key>bundle-identifier</key>
-          <string>com.chjhc.wp</string>
+          <string>com.csgd</string>
           <key>bundle-version</key>
           <string>1.0</string>
           <key>kind</key>
