--- a/wxxt.plist
+++ b/wxxt.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>http://172.18.2.2:8096/zhxtserver/download/wxxt.ipa</string>
+            <string>http://xt.zhcsapp.cn:8096/zhxtserver/download/wxxt.ipa</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -19,7 +19,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://172.18.2.2:8096/zhxtserver/images/wxxtlogo.png</string>
+            <string>http://xt.zhcsapp.cn:8096/zhxtserver/images/wxxtlogo.png</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -27,7 +27,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://172.18.2.2:8096/zhxtserver/images/wxxtlogo.png</string>
+            <string>http://xt.zhcsapp.cn:8096/zhxtserver/images/wxxtlogo.png</string>
           </dict>
         </array>
         <key>metadata</key>
