--- a/zhcsTest.plist
+++ b/zhcsTest.plist
@@ -11,7 +11,7 @@
             <key>kind</key>
             <string>software-package</string>
             <key>url</key>
-            <string>http://zhcstest.zhcsapp.cn:8080/test/download/zhcs.ipa</string>
+            <string>http://zhcstest.zhcsapp.cn:8080/zhcsserver/download/zhcs.ipa</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -19,7 +19,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://zhcstest.zhcsapp.cn:8080/test/images/zhcslogo.png</string>
+            <string>http://zhcstest.zhcsapp.cn:8080/zhcsserver/images/zhcslogo.png</string>
           </dict>
           <dict>
             <key>kind</key>
@@ -27,7 +27,7 @@
             <key>needs-shine</key>
             <false/>
             <key>url</key>
-            <string>http://zhcstest.zhcsapp.cn:8080/test/images/zhcslogo.png</string>
+            <string>http://zhcstest.zhcsapp.cn:8080/zhcsserver/images/zhcslogo.png</string>
           </dict>
         </array>
         <key>metadata</key>
